<resources>
    <string name="app_name">Navigation Drawer2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="app_title">ATM consulting</string>
    <string name="profile_email">atendimento@atmconsultoria.com.br</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_assignment">Assignment</string>
    <string name="menu_people">People</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>