<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/assignment"
            android:title="@string/menu_assignment" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/people"
            android:title="@string/menu_people" />

    </group>

    <item android:title="Contact">
        <menu>

            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/email"
                android:title="@string/menu_contact" />

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/info"
                android:title="@string/menu_info" />
        </menu>

    </item>

</menu>