<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inbox">

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.example.navigationdrawer2.ui.inbox.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_inbox" />

    <fragment
        android:id="@+id/nav_assignment"
        android:name="com.example.navigationdrawer2.ui.assignment.AssignmentFragment"
        android:label="@string/menu_assignment"
        tools:layout="@layout/fragment_assignment" />

    <fragment
        android:id="@+id/nav_people"
        android:name="com.example.navigationdrawer2.ui.people.PeopleFragment"
        android:label="@string/menu_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.navigationdrawer2.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.navigationdrawer2.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

</navigation>